06/25/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.4 'Severard':
	- multiple origins supported.
	- working on compilation warnings.

06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.3 'Severard':
	- Redis DB connection status fixed (Issue 129).
	- Logfile reset on SIGHUP
	(Gustavo Garcia suggestion).
	- Log reset CLi command.
	- Some error code corrections:
	    * "Mobility forbidden" error changed, to value 405.
	    * "Wrong credentials" situation is now treated as error 441.

06/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.1.2 'Severard':
	- Bandwidth draft implemented.
	- Issues 126, 127 and 128 fixes merged from rfc5766-turn-server.

05/18/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.2 'Threetrees':
	- Code cleaning.
	
05/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.1 'Threetrees':
	- Kernel channel placeholder definitions.

05/02/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 4.0.0.0 'Threetrees':
	- Multi-tenant server.

04/13/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.6 'Marshal West':
	- Addresses logging fixed.
	- Redis admin options fixed.
	- Redis compilation cleaned.

04/07/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.5 'Marshal West':
	- Mobile allocation quota fixed (issue 121);
	- --simple-log option added (Issue 122);
	- documentation fixes (REST API, Redis).

04/06/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.4 'Marshal West':
	- Mobile TCP sessions fixed (issue 120);
	- log information improvements.

04/04/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.3 'Marshal West':
	- Pkey and cert file descriptors to be closed
	on initialization (issue 118);
	- Address bind indefinite cycle on start-up fixed
	(Issue 119);
	- Allocation counters time lag improved.

03/30/2014 Oleg Moskalenko <mom040267@gmail.com>
Version 3.2.3.2 'Marshal West':
	- Allocation counters fixed (issue 117);
	- a possible core dump in the server code fixed;