@@ -2,6 +2,7 @@
 Version 4.0.1.4 'Severard':
 	- multiple origins supported.
 	- working on compilation warnings.
+	- "allocation mismatch" condition fixed (merged from rfc5766-turn-server).
 
 06/13/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.0.1.3 'Severard':
